# bboom_test_task

./: README.md  db.sqlite3  manage.py  pyproject.toml
bboom_test_task/: asgi.py  settings.py  urls.py  wsgi.py
templates/users_posts/: post_create.html  user_list.html  user_posts_list.html
users_posts/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
users_posts/migrations/: 0001_initial.py  0002_alter_post_user_delete_user.py
